인가 인터셉터 관련 코드 복원(/call prefix 삭제)

--- a/src/main/resources/templates/views/biz/fst/BIZFST002M0.html
+++ b/src/main/resources/templates/views/biz/fst/BIZFST002M0.html
@@ -19,7 +19,7 @@
                 id="filter-form"
                 name="form"
                 method="post"
-                action="/call/BIZFST002M0SelectList"
+                action="/BIZFST002M0SelectList"
                 onsubmit="return false;"
               >
                 <div class="row">
@@ -141,7 +141,7 @@
         }
 
         function getFile(input) {
-          return parentGetFile(input, "/call/BIZFST002M0SelectList");
+          return parentGetFile(input, "/BIZFST002M0SelectList");
         }
       </script>
       <script src="js/utils.js"></script>
