--- a/src/main/resources/templates/views/biz/jnl/BIZJNL003M0.html
+++ b/src/main/resources/templates/views/biz/jnl/BIZJNL003M0.html
@@ -19,7 +19,7 @@
                 id="filter-form"
                 name="form"
                 method="post"
-                action="/call/BIZJNL003M0SelectList"
+                action="/BIZJNL003M0SelectList"
                 onsubmit="return false;"
               >
                 <div class="row">
@@ -139,7 +139,7 @@
       }
 
       function getFile(input) {
-        return parentGetFile(input, "/call/BIZJNL003M0SelectList");
+        return parentGetFile(input, "/BIZJNL003M0SelectList");
       }
     </script>
     <script>
