--- a/src/main/resources/templates/views/biz/ins/BIZINS001M0.html
+++ b/src/main/resources/templates/views/biz/ins/BIZINS001M0.html
@@ -19,7 +19,7 @@
                 id="filter-form"
                 name="form"
                 method="post"
-                action="/call/BIZINS001M0SelectList"
+                action="/BIZINS001M0SelectList"
                 onsubmit="return false;"
               >
                 <div class="row">
@@ -141,7 +141,7 @@
         }
         
         function getFile(input){
-            return parentGetFile(input, '/call/BIZINS001M0SelectList');
+            return parentGetFile(input, '/BIZINS001M0SelectList');
         }
         
     </script>
