--- a/src/main/resources/templates/views/biz/jnl/BIZJNL002M0.html
+++ b/src/main/resources/templates/views/biz/jnl/BIZJNL002M0.html
@@ -19,7 +19,7 @@
                 id="filter-form"
                 name="form"
                 method="post"
-                action="/call/BIZJNL002M0SelectList"
+                action="/BIZJNL002M0SelectList"
                 onsubmit="return false;"
               >
                 <div class="row">
@@ -142,19 +142,19 @@
         }
         
         function getFile(input){
-            return parentGetFile(input, '/call/BIZJNL002M0SelectList');
+            return parentGetFile(input, '/BIZJNL002M0SelectList');
         }
         
         function insertFile(addedRow) { 
-            parentInsertFile(addedRow, '/call/BIZJNL002M0InsertList')
+            parentInsertFile(addedRow, '/BIZJNL002M0InsertList')
         }
         
         function updateFile(updatedRow) {
-            parentUpdateFile(updatedRow, '/call/BIZJNL002M0UpdateList')
+            parentUpdateFile(updatedRow, '/BIZJNL002M0UpdateList')
         }
         
         function deleteFile(todeleteRow) {
-            parentDeleteFile(todeleteRow, '/call/BIZJNL002M0DeleteList')
+            parentDeleteFile(todeleteRow, '/BIZJNL002M0DeleteList')
         }
     </script>
     <script>
