--- a/src/main/resources/templates/views/mst/sys/MSTSYS002M0.html
+++ b/src/main/resources/templates/views/mst/sys/MSTSYS002M0.html
@@ -46,7 +46,7 @@
                 id="filter-form"
                 name="form"
                 method="post"
-                action="/call/MSTSYS001M0SelectList"
+                action="/MSTSYS001M0SelectList"
                 onsubmit="return false;"
               >
                 <div class="row">
@@ -189,15 +189,15 @@
         }
         
         function getFile(input){
-            return parentGetFile(input, '/call/MSTSYS002M0SelectList');
+            return parentGetFile(input, '/MSTSYS002M0SelectList');
         }
         
         function insertFile(addedRow) { 
-            parentInsertFile(addedRow, '/call/MSTSYS002M0InsertList')
+            parentInsertFile(addedRow, '/MSTSYS002M0InsertList')
         }
         
         function updateFile(updatedRow) {
-            parentUpdateFile(updatedRow, '/call/MSTSYS002M0UpdateList')
+            parentUpdateFile(updatedRow, '/MSTSYS002M0UpdateList')
         }
         
         function strLenValidator(value, args) {
@@ -232,15 +232,15 @@
         }
 
         function getFileB(input) {
-            return parentGetFileB(input, '/call/MSTSYS002M1SelectList');
+            return parentGetFileB(input, '/MSTSYS002M1SelectList');
         }
 
         function insertFileB(addedRow) {
-            parentInsertFile(addedRow, '/call/MSTSYS002M1InsertList');
+            parentInsertFile(addedRow, '/MSTSYS002M1InsertList');
         }
 
         function updateFileB(updatedRow) {
-            parentUpdateFile(updatedRow, '/call/MSTSYS002M1UpdateList');
+            parentUpdateFile(updatedRow, '/MSTSYS002M1UpdateList');
         }
         
         // B Grid 초기화 및 데이터 로드 함수
