--- a/src/main/resources/templates/fragments/icon.html
+++ b/src/main/resources/templates/fragments/icon.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-	<th:block th:fragment="101000000">
+	<th:block th:fragment="M101000000">
 		<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-files">
 			<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
 			<path d="M15 3v4a1 1 0 0 0 1 1h4" />
@@ -8,7 +8,7 @@
 			<path d="M16 17v2a2 2 0 0 1 -2 2h-7a2 2 0 0 1 -2 -2v-10a2 2 0 0 1 2 -2h2" />
 		</svg>
 	</th:block>
-	<th:block th:fragment="102000000">
+	<th:block th:fragment="M102000000">
 		<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-stopwatch">
 			<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
 			<path d="M5 13a7 7 0 1 0 14 0a7 7 0 0 0 -14 0z" />
@@ -18,7 +18,7 @@
 		</svg>
 
 	</th:block>
-	<th:block th:fragment="201000000">
+	<th:block th:fragment="M201000000">
 		<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-abacus">
 			<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
 			<path d="M5 3v18" />
@@ -34,7 +34,7 @@
 			<path d="M3 21h18" />
 		</svg>
 	</th:block>
-	<th:block th:fragment="202000000">
+	<th:block th:fragment="M202000000">
 		<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-tournament">
 			<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
 			<path d="M4 4m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
@@ -46,7 +46,7 @@
 			<path d="M14 10h4" />
 		</svg>
 	</th:block>
-	<th:block th:fragment="203000000">
+	<th:block th:fragment="M203000000">
 		<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-vocabulary">
 			<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
 			<path d="M10 19h-6a1 1 0 0 1 -1 -1v-14a1 1 0 0 1 1 -1h6a2 2 0 0 1 2 2a2 2 0 0 1 2 -2h6a1 1 0 0 1 1 1v14a1 1 0 0 1 -1 1h-6a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2z" />
@@ -58,7 +58,7 @@
 			<path d="M16 15h1" />
 		</svg>
 	</th:block>
-	<th:block th:fragment="204000000">
+	<th:block th:fragment="M204000000">
 		<svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-stethoscope">
 			<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
 			<path d="M6 4h-1a2 2 0 0 0 -2 2v3.5h0a5.5 5.5 0 0 0 11 0v-3.5a2 2 0 0 0 -2 -2h-1" />
@@ -68,7 +68,7 @@
 			<path d="M20 10m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
 		</svg>
 	</th:block>
-	<th:block th:fragment="801000000">
+	<th:block th:fragment="M801000000">
 		<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-adjustments-horizontal">
 			<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
 			<path d="M14 6m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
@@ -82,7 +82,7 @@
 			<path d="M19 18l1 0" />
 		</svg>
 	</th:block>
-	<th:block th:fragment="901000000">
+	<th:block th:fragment="M901000000">
 		<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-devices-2">
 			<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
 			<path d="M10 15h-6a1 1 0 0 1 -1 -1v-8a1 1 0 0 1 1 -1h6" />
