--- a/src/main/resources/templates/views/user/newPassword.html
+++ b/src/main/resources/templates/views/user/newPassword.html
@@ -98,7 +98,7 @@
         $.ajax({
             type: "post",
             url: "/auth/adamsLoginPw",
-            async: true,
+            async: false,
             dataType: "json",
             contentType: "application/json; charset=utf-8",
             data: JSON.stringify(requestData),
@@ -113,10 +113,6 @@
         });
     }
 
-    $("#passwordResetForm").on("submit", function (e) {
-        e.preventDefault();
-        submitPasswordChange();
-    });
 </script>
 
 </body>
